# Version 0.2

## Breaking changes

* `format_table` now renders input data frame to `html` by default instead of `markdown`.
* `formattable.matrix` is removed to support matrix/array formatting. Explicitly convert matrix to data frame if you want to create a formattable data frame.
* `format_table` and `formattable.data.frame` no longer accepts `check.rows` and `check.names` arguments. `row.names` accepts a logical value and is directly passed to `knitr::kable`.

## New features

* `formattable` and built-in formatter functions (e.g. `percent`) now work with matrix and array objects.
* Area formatting is now supported (discussed in #36, #40) with `area(row, col) ~ formatter`. See examples via `?formattable.data.frame`.
* Now a formattable data frame can be converted to `DT::datatable` via `formattable::as.datatable`.

## Enhancements

* The rendered HTML table now supports customizable CSS styling via `table_attr` argument. (#57)
* `color_bar` now uses `proportion` by default as the rescaling function.

## Bug fixes

* Fixes an encoding problem rendering formattable data frame. (#30)
* Fixes the size and alignment issues in color bar. (#49)
* `format.formattable` now preserves the names of input vector. (#56)

# Version 0.1.7

## Breaking changes

* `color_bar` is now broken into two versions using different transform functions:
  * `normalize_bar` uses `normalize`, the same as `color_bar` in previous versions
  * `proportion_bar` uses newly introduced `proportion` as `x / max(abs(x))` to
  create bars of proportional width. (#42, #49)

## Bug fixes

* Fix: named vectors lose their names (#56)

# Version 0.1.6

* Fix #43

# Version 0.1.5

* Released to CRAN