@@ -12,7 +12,7 @@ Description: Provides functions to create formattable vectors and data frames.
     web pages.
 Depends:
     R (> 3.0.2)
-Date: 2016-07-25
+Date: 2016-07-28
 Imports:
     methods,
     htmltools,
